--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
             <div class="project-meta">
                 <div><strong>Project:</strong> CRC Visualizer — Computer Networks</div>
                 <div><strong>Student:</strong> Divyansh Dargan (Reg: 24BCE5131)</div>
+                <div>
+                <strong>Student:</strong> Aviskha Talukdar<br>
+                (Reg: 24BCE5100)
+                </div><div>
+                <strong>Student:</strong> Mokshdaa Gupta<br>
+                (Reg: 24BCE5095)
+                </div>
+                
                 <div><strong>Professor:</strong> Dr. Swaminathan A</div>
             </div>
         
